--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.8.2",
+    "firebase-tools": "^6.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
